# FlightScraperAPI

./: README.md  main.py  middleware.py  pyproject.toml  text_output_structure.md  voice_output_structure.md
scraper/: browser.py  constants.py  errors.py  forms.py  models.py  router.py  scraper.py  types.py  utils.py  validators.py
scraper/constants/: selectors.py
text/constants/: prompts.py
voice/: app.py  constants.py  errors.py  logging.py  models.py  router.py  utils.py  voice.py
