[project]
name = "flightscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.121.2",
    "playwright>=1.55.0",
    "pydantic>=2.12.3",
    "pytest>=9.0.1",
    "tenacity>=9.1.2",
]