[project]
name = "flightscraper"
version = "0.1.0"
description = "Flight scraper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.121.2",
    "openai>=2.8.1",
    "playwright>=1.55.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "tenacity>=9.1.2",
]
